src/snapshots/purring__lexer__tests__qual.snap
---
source: src/lexer.rs
expression: "p(\"A.B.Unit A.B.var A.B.### A.B....\")"
---
Ok(Qual("A."))
Ok(Qual("B."))
Ok(Upper("Unit"))
Ok(Qual("A."))
Ok(Qual("B."))
Ok(Lower("var"))
Ok(Qual("A."))
Ok(Qual("B."))
Ok(Symbol("###"))
Ok(Qual("A."))
Ok(Qual("B."))
Ok(Symbol("..."))
