src/snapshots/purring__lexer__tests__raw_string.snap
---
source: src/lexer.rs
expression: "p(\"\\\"\\\"\\\"\\\"\\\"\\\"\")"
---
[
    Ok(
        RawString(
            "\"\"\"\"\"\"",
        ),
    ),
]
