src/snapshots/purring__lexer__tests__raw_string_7.snap
---
source: src/lexer.rs
expression: "p(\"\\\"\\\"\\\"\\\"\\\"\\\"\\\"\")"
---
Ok(RawString("\"\"\"\"\"\"\""))
Ok(LayEnd)
Ok(LayTop)
