src/snapshots/purring__lexer__tests__some_char_special_cases.snap
---
source: src/lexer.rs
expression: "p(r#\"'\\n''\\r''\\t''\\\"''\\\\''\\xF00'\"#)"
---
Ok(Char("'\\n'"))
Ok(Char("'\\r'"))
Ok(Char("'\\t'"))
Ok(Char("'\\\"'"))
Ok(Char("'\\\\'"))
Ok(Char("'\\xF00'"))
