src/snapshots/purring__lexer__tests__some_tokens.snap
---
source: src/lexer.rs
expression: "p(\"module A where (a, b, c)\\nimport B as B\\nfoo = 1 + B.t\")"
---
Ok(Lower("module"))
Ok(Upper("A"))
Ok(Where)
Ok(LeftParen)
Ok(Lower("a"))
Ok(Comma)
Ok(Lower("b"))
Ok(Comma)
Ok(Lower("c"))
Ok(RightParen)
Ok(LayTop)
Ok(Lower("import"))
Ok(Upper("B"))
Ok(As)
Ok(Upper("B"))
Ok(LayTop)
Ok(Lower("foo"))
Ok(Symbol("="))
Ok(Number("1"))
Ok(Symbol("+"))
Ok(Qual("B."))
Ok(Lower("t"))
