src/snapshots/purring__lexer__tests__string_with_quote.snap
---
source: src/lexer.rs
expression: "p(r#\"\"Qotes are \\\"rad\\\"\"\"#)"
---
Ok(String("\"Qotes are \\\"rad\\\"\""))
Ok(LayEnd)
Ok(LayTop)
