src/snapshots/purring__lexer__tests__swedish_lower.snap
---
source: src/lexer.rs
expression: "p(\"överförning\")"
---
Ok(Lower("överförning"))
Ok(LayEnd)
Ok(LayTop)
